test/negative/feature_thiscall.java

public class feature_thiscall {
  public feature_thiscall(String x) {}
  public feature_thiscall(int x) {
    this("foo");
  }
}

